--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,15 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
+    "@lottiefiles/react-lottie-player": "^3.5.3",
     "@react-three/drei": "^9.102.6",
     "@react-three/fiber": "^8.15.19",
     "@types/three": "^0.162.0",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
     "clsx": "^2.1.0",
+    "emailjs": "^4.0.3",
+    "firebase": "^10.10.0",
     "framer-motion": "^11.0.20",
+    "lottie-react": "^2.4.0",
     "next": "14.1.4",
     "node-fetch": "^3.3.2",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.2.2",
