--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "clsx": "^2.1.0",
+    "driver.js": "^1.3.1",
     "emailjs": "^4.0.3",
     "firebase": "^10.10.0",
     "framer-motion": "^11.0.20",
